--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Refrigerante</title>
 </head>
 <body>
-    <main></main>
+    <main>
+        <div>Straberry</div>
+    </main>
 </body>
 </html>
