--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Refrigerante</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <main>
-        <div>Straberry</div>
+      <div class="item">
+        <div class="title">Strawberry</div>
+        <img src="./img/Morango-refrigerante-foregroundBlur.png" class="fruit"/>
+        <img src="./img/Morango-refrigerante.png" class="refri" />
+      </div>
+
+      <div class="item">
+        <div class="title">Avocado</div>
+        <img src="./img/Abacate-refrigerante-foregroundBlur.png class="fruit"/>
+        <img src="./img/Abacate-refrigerante.png" class="refri" />
+      </div>
+
+      <div class="item">
+        <div class="title">Orange</div>
+        <img src="./img/Laranja-refrigerante-foregroundBlur.png" class="fruit"/>
+        <img src="./img/Laranja-refrigerante.png" class="refri" />
+      </div>
     </main>
-</body>
+  </body>
 </html>
