--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <main>
-      <div class="item">
+      <div class="item active">
         <div class="title">Strawberry</div>
         <img src="./img/Morango-refrigerante-foregroundBlur.png" class="fruit"/>
         <img src="./img/Morango-refrigerante.png" class="refri" />
@@ -21,11 +21,17 @@
         <img src="./img/Abacate-refrigerante.png" class="refri" />
       </div>
 
-      <div class="item">
+      <div class="item hidden">
         <div class="title">Orange</div>
         <img src="./img/Laranja-refrigerante-foregroundBlur.png" class="fruit"/>
         <img src="./img/Laranja-refrigerante.png" class="refri" />
       </div>
+
+      <div class="arrow">
+        <button> < </button>
+        <button> > </button>
+      </div>
+      
     </main>
   </body>
 </html>
