--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 
   <body>
     <main>
-      <div class="item active">
+      <div class="item active" style="--background: #EA3D41">
         <div class="title">Strawberry</div>
         <img src="./img/Morango-refrigerante-foregroundBlur.png" class="fruit"/>
         <img src="./img/Morango-refrigerante.png" class="refri" />
       </div>
 
-      <div class="item">
+      <div class="item"style="--background: #ED5643">
         <div class="title">Avocado</div>
         <img src="./img/Abacate-refrigerante-foregroundBlur.png class="fruit"/>
         <img src="./img/Abacate-refrigerante.png" class="refri" />
       </div>
 
-      <div class="item hidden">
+      <div class="item hidden" style="--background: #E7A043">
         <div class="title">Orange</div>
         <img src="./img/Laranja-refrigerante-foregroundBlur.png" class="fruit"/>
         <img src="./img/Laranja-refrigerante.png" class="refri" />
