style da bebida finalizado

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="./img/Morango-refrigerante.png" class="refri" />
       </div>
 
-      <div class="item"style="--background: #ED5643">
+      <div class="item"style="--background: #2D5643">
         <div class="title">Avocado</div>
         <img src="./img/Abacate-refrigerante-foregroundBlur.png class="fruit"/>
         <img src="./img/Abacate-refrigerante.png" class="refri" />
@@ -28,8 +28,8 @@
       </div>
 
       <div class="arrow">
-        <button> < </button>
-        <button> > </button>
+        <button id="prev"> < </button>
+        <button id="next"> > </button>
       </div>
       
     </main>
