--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="./img/Abacate-refrigerante.png" class="refri" />
       </div>
 
-      <div class="item hidden" style="--background: #E7A043">
+      <div class="item" style="--background: #E7A043">
         <div class="title">Orange</div>
         <img src="./img/Laranja-refrigerante-foregroundBlur.png" class="fruit"/>
         <img src="./img/Laranja-refrigerante.png" class="refri" />
@@ -34,6 +34,6 @@
       
     </main>
   </body>
-  <script src="./script.js"></script>
+  <script src="./script.js"></script> 
   
 </html>
