animação e projeto finalizado

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   <body>
     <main>
       <div class="item active" style="--background: #EA3D41">
-        <div class="title">Strawberry</div>
+        <div class="title">Morango</div>
         <img src="./img/Morango-refrigerante-foregroundBlur.png" class="fruit"/>
         <img src="./img/Morango-refrigerante.png" class="refri" />
       </div>
 
       <div class="item"style="--background: #2D5643">
-        <div class="title">Avocado</div>
-        <img src="./img/Abacate-refrigerante-foregroundBlur.png class="fruit"/>
+        <div class="title">Abacate</div>
+        <img src="./img/Abacate-refrigerante-foregroundBlur.png" class="fruit"/>
         <img src="./img/Abacate-refrigerante.png" class="refri" />
       </div>
 
       <div class="item" style="--background: #E7A043">
-        <div class="title">Orange</div>
+        <div class="title">Laranja</div>
         <img src="./img/Laranja-refrigerante-foregroundBlur.png" class="fruit"/>
         <img src="./img/Laranja-refrigerante.png" class="refri" />
       </div>
